--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -51,6 +51,21 @@
           </div>
         </div>
       </section>
+      <section>
+        <div>
+          <img src="./quote_avatar.png" alt="" />
+          <div>
+            <blockquote>
+              <p>
+                « Those tutorials are concise and go straight to the point. I
+                can’t think of a better place to learn smiling. And it’s so fun!
+              </p>
+            </blockquote>
+            <p>Person Name</p>
+            <p>weather presenter</p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
