--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -66,6 +66,103 @@
           </div>
         </div>
       </section>
+      <section>
+        <h1>Most popular tutorials</h1>
+        <div>
+          <div>
+            <img src="./video1.png" alt="Diagonal Smile video" />
+            <h2>Diagonal Smile</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem
+              doloribus voluptatibus quam vero beatae eum quo accusantium
+              veniam? Recusandae, suscipit.
+            </p>
+            <div>
+              <img src="./video1_author.png" alt="" />
+              <h3>Philip Massey</h3>
+            </div>
+            <div>
+              <div>
+                <img src="./star_full.png" alt="" />
+                <img src="./star_full.png" alt="" />
+                <img src="./star_full.png" alt="" />
+                <img src="./star_full.png" alt="" />
+                <img src="./star_empty.png" alt="" />
+              </div>
+              <p>8 min</p>
+            </div>
+          </div>
+          <div>
+            <img src="./video2.png" alt="" />
+            <h2>Sad Smile</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam
+              eligendi inventore mollitia non. Aliquam doloribus necessitatibus
+              soluta magni assumenda neque?
+            </p>
+            <div>
+              <img src="./video1_author.png" alt="" />
+              <h3>Philip Massey</h3>
+            </div>
+            <div>
+              <div>
+                <img src="./star_full.png" alt="" />
+                <img src="./star_full.png" alt="" />
+                <img src="./star_full.png" alt="" />
+                <img src="./star_full.png" alt="" />
+                <img src="./star_empty.png" alt="" />
+              </div>
+              <p>8 min</p>
+            </div>
+          </div>
+          <div>
+            <img src="./video3.png" alt="" />
+            <h2>Natural Smile</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
+              fuga iusto similique saepe. Dignissimos nisi, dicta velit
+              accusamus officia quaerat?
+            </p>
+            <div>
+              <img src="./video1_author.png" alt="" />
+              <h3>Philip Massey</h3>
+            </div>
+            <div>
+              <div>
+                <img src="./star_full.png" alt="" />
+                <img src="./star_full.png" alt="" />
+                <img src="./star_full.png" alt="" />
+                <img src="./star_full.png" alt="" />
+                <img src="./star_empty.png" alt="" />
+              </div>
+              <p>8 min</p>
+            </div>
+          </div>
+          <div>
+            <img src="./video4.png" alt="" />
+            <h2>Happy Smile</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptates suscipit voluptatibus nesciunt impedit velit. Beatae
+              omnis quidem iste qui minima.
+            </p>
+            <div>
+              <img src="./video1_author.png" alt="" />
+              <h3>Philip Massey</h3>
+            </div>
+            <div>
+              <div>
+                <img src="./star_full.png" alt="" />
+                <img src="./star_full.png" alt="" />
+                <img src="./star_full.png" alt="" />
+                <img src="./star_full.png" alt="" />
+                <img src="./star_empty.png" alt="" />
+              </div>
+              <p>8 min</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
