--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -163,6 +163,44 @@
           </div>
         </div>
       </section>
+      <section>
+        <h1>Free membership</h1>
+        <div>
+          <div>
+            <img src="./membership_smile.png" alt="" />
+            <h2>Lorem Ipsum</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Praesentium, impedit!
+            </p>
+          </div>
+          <div>
+            <img src="./membership_smile.png" alt="" />
+            <h2>Lorem Ipsum</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Praesentium, impedit!
+            </p>
+          </div>
+          <div>
+            <img src="./membership_smile.png" alt="" />
+            <h2>Lorem Ipsum</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Praesentium, impedit!
+            </p>
+          </div>
+          <div>
+            <img src="./membership_smile.png" alt="" />
+            <h2>Lorem Ipsum</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Praesentium, impedit!
+            </p>
+          </div>
+        </div>
+        <button>REGISTER FOR FREE</button>
+      </section>
     </main>
   </body>
 </html>
