--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -201,6 +201,64 @@
         </div>
         <button>REGISTER FOR FREE</button>
       </section>
+      <section>
+        <h1>F.A.Q.</h1>
+        <div class="faq-blocks-container">
+          <div class="row">
+            <div class="col item">
+              <h2>How does this work?</h2>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
+                aliquam asperiores atque minus! Voluptas nemo molestiae porro,
+                illo sint quam suscipit sed debitis velit. Debitis itaque
+                impedit inventore corporis quasi!
+              </p>
+            </div>
+            <div class="col item">
+              <h2>How does this work?</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                nisi voluptates ipsum ad labore dolor exercitationem quidem
+                nostrum aperiam deserunt fugiat id, earum laboriosam nemo!
+                Explicabo atque neque blanditiis itaque.
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col item">
+              <h2>How does this work?</h2>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
+                aliquam asperiores atque minus! Voluptas nemo molestiae porro,
+                illo sint quam suscipit sed debitis velit. Debitis itaque
+                impedit inventore corporis quasi!
+              </p>
+            </div>
+            <div class="col item">
+              <h2>How does this work?</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
+                nisi voluptates ipsum ad labore dolor exercitationem quidem
+                nostrum aperiam deserunt fugiat id, earum laboriosam nemo!
+                Explicabo atque neque blanditiis itaque.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <footer>
+      <div class="footer-container">
+        <div class="row">
+          <img src="./logo.png" alt="" />
+          <div>
+            <a href="#"><img src="./facebook.png" alt="" /></a>
+            <a href="#"><img src="./twitter.png" alt="" /></a>
+            <a href="#"><img src="./instagram.png" alt="" /></a>
+          </div>
+        </div>
+        <p>©smileschool 2020</p>
+      </div>
+    </footer>
   </body>
 </html>
