--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>School Page</title>
+    <link rel="stylesheet" href="./normalize.css" />
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <!-- Header -->
     <header>
-      <div>
-        <a href="#"><img src="./logo.png" alt="School Page's logo" /></a>
+      <div class="header-container">
+        <a class="logo" href="#"
+          ><img src="./logo.png" alt="School Page's logo"
+        /></a>
         <nav>
           <ul>
             <li><a href="#">Courses</a></li>
@@ -20,38 +24,41 @@
       </div>
     </header>
     <main>
-      <section>
-        <div>
+      <!-- Intro section -->
+      <section class="intro">
+        <div class="catchphrases">
           <h1>Get schooled</h1>
-          <p>Smiles Grin Laugh</p>
-          <button>Register for free</button>
+          <p class="catchwords">Smiles Grin Laugh</p>
+          <button class="register">Register for free</button>
         </div>
-        <div>
-          <h2>Learn from the pros</h2>
-          <div>
-            <div>
+        <div class="pros-intro">
+          <h2><span class="catchphrase-emphasis">Learn</span> from the pros</h2>
+          <div class="pros">
+            <div class="pro">
               <img src="./pro1.png" alt="" />
               <h3>Philip Massey</h3>
-              <p>« Smile of the year » 2018 - 2019</p>
+              <p>« Smile of the year »<br />2018 - 2019</p>
             </div>
-            <div>
+            <div class="pro">
               <img src="./pro2.png" alt="" />
               <h3>Nannie Lawrence</h3>
-              <p>Best « little smile » 2017</p>
+              <p>Best « little smile »<br />2017</p>
             </div>
-            <div>
+            <div class="pro">
               <img src="./pro3.png" alt="" />
               <h3>Bruce Walters</h3>
-              <p>Best « Friend Smile » live performance 2019</p>
+              <p>Best « Friend Smile »<br />live performance 2019</p>
             </div>
-            <div>
+            <div class="pro">
               <img src="./pro4.png" alt="" />
               <h3>Henry Hughes</h3>
-              <p>« 24h smiles » winner 2016 - 2019</p>
+              <p>« 24h smiles » winner<br />2016 - 2019</p>
             </div>
           </div>
         </div>
       </section>
+      <!-- /Get Schooled section -->
+
       <section>
         <div>
           <img src="./quote_avatar.png" alt="" />
