--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -57,10 +57,10 @@
           </div>
         </div>
       </section>
-      <!-- /Get Schooled section -->
-
-      <section>
-        <div>
+      <!-- /Intro section -->
+      <!-- Quotes section -->
+      <section class="quotes">
+        <div class="quotes-inner">
           <img src="./quote_avatar.png" alt="" />
           <div>
             <blockquote>
@@ -69,11 +69,12 @@
                 can’t think of a better place to learn smiling. And it’s so fun!
               </p>
             </blockquote>
-            <p>Person Name</p>
-            <p>weather presenter</p>
+            <p class="quote-author">Person Name</p>
+            <p class="quote-role">weather presenter</p>
           </div>
         </div>
       </section>
+      <!-- /Quotes section -->
       <section>
         <h1>Most popular tutorials</h1>
         <div>
