--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -75,22 +75,25 @@
         </div>
       </section>
       <!-- /Quotes section -->
-      <section>
-        <h1>Most popular tutorials</h1>
-        <div>
-          <div>
+      <!-- Tutorials section -->
+      <section class="tutorials">
+        <h1>
+          Most <span class="catchphrase-emphasis">popular</span> tutorials
+        </h1>
+        <div class="tutorials-grid">
+          <div class="tutorial">
             <img src="./video1.png" alt="Diagonal Smile video" />
+            <img class="play-button" src="./assets/play_button.png" alt="" />
             <h2>Diagonal Smile</h2>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem
-              doloribus voluptatibus quam vero beatae eum quo accusantium
-              veniam? Recusandae, suscipit.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio,
+              repellendus!
             </p>
             <div>
               <img src="./video1_author.png" alt="" />
               <h3>Philip Massey</h3>
             </div>
-            <div>
+            <div class="rating-duration">
               <div>
                 <img src="./star_full.png" alt="" />
                 <img src="./star_full.png" alt="" />
@@ -98,22 +101,22 @@
                 <img src="./star_full.png" alt="" />
                 <img src="./star_empty.png" alt="" />
               </div>
-              <p>8 min</p>
+              <p class="duration">8 min</p>
             </div>
           </div>
-          <div>
+          <div class="tutorial">
             <img src="./video2.png" alt="" />
+            <img class="play-button" src="./assets/play_button.png" alt="" />
             <h2>Sad Smile</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam
-              eligendi inventore mollitia non. Aliquam doloribus necessitatibus
-              soluta magni assumenda neque?
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio,
+              repellendus!
             </p>
             <div>
               <img src="./video1_author.png" alt="" />
               <h3>Philip Massey</h3>
             </div>
-            <div>
+            <div class="rating-duration">
               <div>
                 <img src="./star_full.png" alt="" />
                 <img src="./star_full.png" alt="" />
@@ -121,22 +124,22 @@
                 <img src="./star_full.png" alt="" />
                 <img src="./star_empty.png" alt="" />
               </div>
-              <p>8 min</p>
+              <p class="duration">8 min</p>
             </div>
           </div>
-          <div>
+          <div class="tutorial">
             <img src="./video3.png" alt="" />
+            <img class="play-button" src="./assets/play_button.png" alt="" />
             <h2>Natural Smile</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio
-              fuga iusto similique saepe. Dignissimos nisi, dicta velit
-              accusamus officia quaerat?
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio,
+              repellendus!
             </p>
             <div>
               <img src="./video1_author.png" alt="" />
               <h3>Philip Massey</h3>
             </div>
-            <div>
+            <div class="rating-duration">
               <div>
                 <img src="./star_full.png" alt="" />
                 <img src="./star_full.png" alt="" />
@@ -144,22 +147,22 @@
                 <img src="./star_full.png" alt="" />
                 <img src="./star_empty.png" alt="" />
               </div>
-              <p>8 min</p>
+              <p class="duration">8 min</p>
             </div>
           </div>
-          <div>
+          <div class="tutorial">
             <img src="./video4.png" alt="" />
+            <img class="play-button" src="./assets/play_button.png" alt="" />
             <h2>Happy Smile</h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptates suscipit voluptatibus nesciunt impedit velit. Beatae
-              omnis quidem iste qui minima.
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio,
+              repellendus!
             </p>
             <div>
               <img src="./video1_author.png" alt="" />
               <h3>Philip Massey</h3>
             </div>
-            <div>
+            <div class="rating-duration">
               <div>
                 <img src="./star_full.png" alt="" />
                 <img src="./star_full.png" alt="" />
@@ -167,11 +170,12 @@
                 <img src="./star_full.png" alt="" />
                 <img src="./star_empty.png" alt="" />
               </div>
-              <p>8 min</p>
+              <p class="duration">8 min</p>
             </div>
           </div>
         </div>
       </section>
+      <!-- /Tutorials section -->
       <section>
         <h1>Free membership</h1>
         <div>
