--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -176,44 +176,34 @@
         </div>
       </section>
       <!-- /Tutorials section -->
-      <section>
-        <h1>Free membership</h1>
-        <div>
-          <div>
+      <!-- Membership section -->
+      <section class="membership">
+        <h1><span class="catchphrase-emphasis">Free</span> membership</h1>
+        <div class="members">
+          <div class="member">
             <img src="./membership_smile.png" alt="" />
             <h2>Lorem Ipsum</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Praesentium, impedit!
-            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
-          <div>
+          <div class="member">
             <img src="./membership_smile.png" alt="" />
             <h2>Lorem Ipsum</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Praesentium, impedit!
-            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
-          <div>
+          <div class="member">
             <img src="./membership_smile.png" alt="" />
             <h2>Lorem Ipsum</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Praesentium, impedit!
-            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
-          <div>
+          <div class="member">
             <img src="./membership_smile.png" alt="" />
             <h2>Lorem Ipsum</h2>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Praesentium, impedit!
-            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
         </div>
-        <button>REGISTER FOR FREE</button>
+        <button class="register">REGISTER FOR FREE</button>
       </section>
+      <!-- /Membership section -->
       <section>
         <h1>F.A.Q.</h1>
         <div class="faq-blocks-container">
