--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -204,26 +204,33 @@
         <button class="register">REGISTER FOR FREE</button>
       </section>
       <!-- /Membership section -->
-      <section>
+      <!-- FAQ section -->
+      <section class="faq">
         <h1>F.A.Q.</h1>
         <div class="faq-blocks-container">
           <div class="row">
             <div class="col item">
               <h2>How does this work?</h2>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
-                aliquam asperiores atque minus! Voluptas nemo molestiae porro,
-                illo sint quam suscipit sed debitis velit. Debitis itaque
-                impedit inventore corporis quasi!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+                aut magnam earum cupiditate sunt veniam suscipit quod distinctio
+                doloribus nisi consequuntur, ratione facere dolores
+                exercitationem ipsa blanditiis debitis totam at provident
+                inventore est vitae sed ea. Aspernatur, asperiores. Voluptatem
+                accusantium placeat laboriosam quidem in nemo blanditiis fuga
+                possimus, nobis vero!
               </p>
             </div>
             <div class="col item">
               <h2>How does this work?</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
-                nisi voluptates ipsum ad labore dolor exercitationem quidem
-                nostrum aperiam deserunt fugiat id, earum laboriosam nemo!
-                Explicabo atque neque blanditiis itaque.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+                aut magnam earum cupiditate sunt veniam suscipit quod distinctio
+                doloribus nisi consequuntur, ratione facere dolores
+                exercitationem ipsa blanditiis debitis totam at provident
+                inventore est vitae sed ea. Aspernatur, asperiores. Voluptatem
+                accusantium placeat laboriosam quidem in nemo blanditiis fuga
+                possimus, nobis vero!
               </p>
             </div>
           </div>
@@ -231,24 +238,31 @@
             <div class="col item">
               <h2>How does this work?</h2>
               <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illo
-                aliquam asperiores atque minus! Voluptas nemo molestiae porro,
-                illo sint quam suscipit sed debitis velit. Debitis itaque
-                impedit inventore corporis quasi!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+                aut magnam earum cupiditate sunt veniam suscipit quod distinctio
+                doloribus nisi consequuntur, ratione facere dolores
+                exercitationem ipsa blanditiis debitis totam at provident
+                inventore est vitae sed ea. Aspernatur, asperiores. Voluptatem
+                accusantium placeat laboriosam quidem in nemo blanditiis fuga
+                possimus, nobis vero!
               </p>
             </div>
             <div class="col item">
               <h2>How does this work?</h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid
-                nisi voluptates ipsum ad labore dolor exercitationem quidem
-                nostrum aperiam deserunt fugiat id, earum laboriosam nemo!
-                Explicabo atque neque blanditiis itaque.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi
+                aut magnam earum cupiditate sunt veniam suscipit quod distinctio
+                doloribus nisi consequuntur, ratione facere dolores
+                exercitationem ipsa blanditiis debitis totam at provident
+                inventore est vitae sed ea. Aspernatur, asperiores. Voluptatem
+                accusantium placeat laboriosam quidem in nemo blanditiis fuga
+                possimus, nobis vero!
               </p>
             </div>
           </div>
         </div>
       </section>
+      <!-- /FAQ section -->
     </main>
     <footer>
       <div class="footer-container">
