--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -268,7 +268,7 @@
       <div class="footer-container">
         <div class="row">
           <img src="./logo.png" alt="" />
-          <div>
+          <div class="socials">
             <a href="#"><img src="./facebook.png" alt="" /></a>
             <a href="#"><img src="./twitter.png" alt="" /></a>
             <a href="#"><img src="./instagram.png" alt="" /></a>
